--- a/product-recommedations/index.html
+++ b/product-recommedations/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JSON Tree Visualizer</title>
     <link rel="stylesheet" href="http://localhost:7070/product-recommedations/styles.css" />
+    <link rel="stylesheet" href="https://sets.hugeicons.com/837s0ghd8f7.css" crossorigin="anonymous" />
   </head>
   <body>
     <div class="json-tree-container">
