--- a/product-recommedations/index.html
+++ b/product-recommedations/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://sets.hugeicons.com/837s0ghd8f7.css" crossorigin="anonymous" />
   </head>
   <body>
-    <div class="json-tree-container">
+    <div class="json-tree-container" id="create-productrecomms-mapping-container">
       <div class="json-tree" id="jsonTree"></div>
     </div>
     <script src="http://localhost:7070/product-recommedations/index.js"></script>
